# milkv-duo-little

./: .gitignore  Cargo.toml  Makefile  build.rs  firmware.sh  linker.ld  rust-toolchain.toml  setup_net.sh
.cargo/: config.toml
src/: config.rs  entry.rs  main.rs  res_table.rs
src/arch/: exception.rs  interrupt.rs  macros.S  mm.rs  mod.rs  plic.rs  timer.rs  trap.rs
src/common/: mod.rs  print.rs  sleep.rs
src/device/: led.rs  mail.rs  mailbox.rs  mod.rs  ns16550a.rs  pinmux.rs  uart.rs  uart8250.rs
src/device/mailbox/: cmd.rs  mod.rs
