[package]
name = "milkv-duo-little"
version = "0.1.0"
edition = "2021"

[dependencies]
tock-registers = "0.9.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"

[profile.release]
opt-level = "s"
strip = true
lto = true

[profile.dev]
debug = true
opt-level = "z"