[package]
name = "milkv-duo-little"
version = "0.1.0"
edition = "2021"

[dependencies]
tock-registers = "0.9.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
xuantie = "0.0.5"

[build-dependencies]
anyhow = "1.0.96"

[features]
default = []
virt = []

[profile.release]
opt-level = "z"
strip = true
lto = "fat"
panic = "abort"
debug-assertions = false
overflow-checks = false
codegen-units = 1

[profile.dev]
debug = true
opt-level = "z"
